--- a/main.html
+++ b/main.html
@@ -32,131 +32,144 @@
 
   <!-- HEADER -->
   <header>
+    <div class="sticky">
 
-    <nav class="fiverrNavbar navbar navbar-expand-md navbar-light">
-      <div class="d-md-none col-sm-2 col-3">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-
-      <div class="col-6 fiverrNavbar__col">
-        <div class="fiverrNavbar__left">
-          <a href="/" class="header-logo" data-gtm-action="logo" data-gtm-event="navigation" data-gtm-label="clicked">
-            <img src="./img/fiverrLogoBlk.svg">
-          </a>
-
-
-          <form class="fiverrNavbar__form-search" action="">
-            <div class="input-group">
-              <div class="input-group-search">
-                <img src="./img/search.svg" alt="search logo">
-              </div>
-              <input type="search" class="form-control" placeholder="Find Services">
-              <button class="btn--green">Search</button>
-            </div>
-
-          </form>
-
-        </div>
-      </div>
-
-      <div class="col-6 fiverrNavbar__menu">
-        <div class="fiverrNavbar__right">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Fiverr Business</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Explore</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" role="button" href="#" id="dropdownMenuLink" data-toggle="dropdown"
-                aria-expanded="false"><i class="fa fa-globe"></i> English</a>
-
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">English</a>
-                <a class="dropdown-item" href="#">Deutsch</a>
-                <a class="dropdown-item" href="#">Espanol</a>
-                <a class="dropdown-item" href="#">Francais</a>
-                <a class="dropdown-item" href="#">Portugues</a>
-                <a class="dropdown-item" href="#">Italiano</a>
-                <a class="dropdown-item" href="#">Nederlands</a>
-              </div>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link" role="button" href="#" id="dropdownMenuLink" data-toggle="dropdown"
-                aria-expanded="false"> A$AUD</a>
-
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">United States Dollar (USD) - $</a>
-                <a class="dropdown-item" href="#">Euro (EUR) - €</a>
-                <a class="dropdown-item" href="#">British Pound (GBP) - £</a>
-                <a class="dropdown-item" href="#">Australian Dollar (AUD) - A$</a>
-                <a class="dropdown-item" href="#">Canadian Dollar (CAD) - C$</a>
-                <a class="dropdown-item" href="#">Israeli Shekel (ILS) - ₪</a>
-                <a class="dropdown-item" href="#">Brazillian Real (BRL) - R$</a>
-                <a class="dropdown-item" href="#">Hong Kong Dollar (HKD) - HK$</a>
-                <a class="dropdown-item" href="#">Swedish Krona (SEK) - kr</a>
-                <a class="dropdown-item" href="#">New Zealand Dollar (NZD) - NZ$</a>
-                <a class="dropdown-item" href="#">Singapore Dollar (SGD) - S$</a>
-                <a class="dropdown-item" href="#">Swiss Franc (CHF) - CHF</a>
-                <a class="dropdown-item" href="#">South African Rand (ZAR) - R</a>
-                <a class="dropdown-item" href="#">Chinese Renminbi Yuan (CNY) - ¥</a>
-                <a class="dropdown-item" href="#">Indian Rupee (INR) - ₹</a>
-                <a class="dropdown-item" href="#">Malaysian Ringgit (MYR) - RM</a>
-                <a class="dropdown-item" href="#">Mexican Peso (MXN) - $</a>
-                <a class="dropdown-item" href="#">Pakistani Rupee (PKR) - Rs</a>
-                <a class="dropdown-item" href="#">Philippine Peso (PHP) - ₱</a>
-                <a class="dropdown-item" href="#">New Taiwan Dollar (TWD) - $</a>
-                <a class="dropdown-item" href="#">Thai Baht (THB) - ฿</a>
-                <a class="dropdown-item" href="#">Turkish New Lira (TRY) - ₺</a>
-                <a class="dropdown-item" href="#">United Arab Emirates Dirham (AED) - ﷼</a>
-
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Become A Seller</a>
-
-
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sign In</a>
-
-
-            </li>
-
-            <li class="nav-item fiverrNavbar__btn">
-              <button class="btn--white">Join</button>
-
-            </li>
-
-
-          </ul>
+      <nav class="fiverrNavbar navbar navbar-expand-md navbar-light">
+        <div class="d-md-none col-sm-2 col-3">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
         </div>
 
-      </div>
+        <div class="col-6 fiverrNavbar__col">
+          <div class="fiverrNavbar__left">
+            <a href="/" class="header-logo" data-gtm-action="logo" data-gtm-event="navigation" data-gtm-label="clicked">
+              <img src="./img/fiverrLogoBlk.svg">
+            </a>
 
-    </nav>
+
+            <form class="fiverrNavbar__form-search" action="">
+              <div class="input-group">
+                <div class="input-group-search">
+                  <img src="./img/search.svg" alt="search logo">
+                </div>
+                <input type="search" class="form-control" placeholder="Find Services">
+                <button class="btn--green">Search</button>
+              </div>
+
+            </form>
+
+          </div>
+        </div>
+
+        <div class="col-6 fiverrNavbar__menu">
+          <div class="fiverrNavbar__right">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Fiverr Business</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Explore</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" role="button" href="#" id="dropdownMenuLink" data-toggle="dropdown"
+                  aria-expanded="false"><i class="fa fa-globe"></i> English</a>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">English</a>
+                  <a class="dropdown-item" href="#">Deutsch</a>
+                  <a class="dropdown-item" href="#">Espanol</a>
+                  <a class="dropdown-item" href="#">Francais</a>
+                  <a class="dropdown-item" href="#">Portugues</a>
+                  <a class="dropdown-item" href="#">Italiano</a>
+                  <a class="dropdown-item" href="#">Nederlands</a>
+                </div>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link" role="button" href="#" id="dropdownMenuLink" data-toggle="dropdown"
+                  aria-expanded="false"> A$AUD</a>
+
+                <div class="dropdown-menu" size="22" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">United States Dollar (USD) - $</a>
+                  <a class="dropdown-item" href="#">Euro (EUR) - €</a>
+                  <a class="dropdown-item" href="#">British Pound (GBP) - £</a>
+                  <a class="dropdown-item" href="#">Australian Dollar (AUD) - A$</a>
+                  <a class="dropdown-item" href="#">Canadian Dollar (CAD) - C$</a>
+                  <a class="dropdown-item" href="#">Israeli Shekel (ILS) - ₪</a>
+                  <a class="dropdown-item" href="#">Brazillian Real (BRL) - R$</a>
+                  <a class="dropdown-item" href="#">Hong Kong Dollar (HKD) - HK$</a>
+                  <a class="dropdown-item" href="#">Swedish Krona (SEK) - kr</a>
+                  <a class="dropdown-item" href="#">New Zealand Dollar (NZD) - NZ$</a>
+                  <a class="dropdown-item" href="#">Singapore Dollar (SGD) - S$</a>
+                  <a class="dropdown-item" href="#">Swiss Franc (CHF) - CHF</a>
+                  <a class="dropdown-item" href="#">South African Rand (ZAR) - R</a>
+                  <a class="dropdown-item" href="#">Chinese Renminbi Yuan (CNY) - ¥</a>
+                  <a class="dropdown-item" href="#">Indian Rupee (INR) - ₹</a>
+                  <a class="dropdown-item" href="#">Malaysian Ringgit (MYR) - RM</a>
+                  <a class="dropdown-item" href="#">Mexican Peso (MXN) - $</a>
+                  <a class="dropdown-item" href="#">Pakistani Rupee (PKR) - Rs</a>
+                  <a class="dropdown-item" href="#">Philippine Peso (PHP) - ₱</a>
+                  <a class="dropdown-item" href="#">New Taiwan Dollar (TWD) - $</a>
+                  <a class="dropdown-item" href="#">Thai Baht (THB) - ฿</a>
+                  <a class="dropdown-item" href="#">Turkish New Lira (TRY) - ₺</a>
+                  <a class="dropdown-item" href="#">United Arab Emirates Dirham (AED) - ﷼</a>
+
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Become A Seller</a>
+
+
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sign In</a>
+
+
+              </li>
+
+              <li class="nav-item fiverrNavbar__btn">
+                <button class="btn--white">Join</button>
+
+              </li>
+
+
+            </ul>
+          </div>
+
+        </div>
+
+      </nav>
+    </div>
   </header>
 
   <!-- CAROUSEL -->
   <section class="carousel">
     <div class="carousel__content container">
-
-      <h1><span>Find the perfect <i>freelance</i> services for your business</span></h1>
-      <form class="fiverrNavbar__form-search" action="">
-        <div class="input-group">
-          <div class="input-group-search">
-            <img src="./img/search.svg" alt="search logo">
+      <div class="carousel__header">
+        <h1><span>Find the perfect <i>freelance</i> services for your business</span></h1>
+        <form class="fiverrNavbar__form-search" action="">
+          <div class="input-group">
+            <div class="input-group-search">
+              <img src="./img/search.svg" alt="search logo">
+            </div>
+            <input type="search" class="form-control" placeholder='Try "building app" mobile'>
+            <button class="btn--green">Search</button>
           </div>
-          <input type="search" class="form-control" placeholder='Try "building app" mobile'>
-          <button class="btn--green">Search</button>
-        </div>
+        </form>
+      </div>
+      <div class="popular">
+        Popular:
+        <ul>
+          <li><a href="#">Website Design</a></li>
+          <li><a href="#">Wordpress</a></li>
+          <li><a href="#">Logo Design</a></li>
+          <li><a href="#">Dropshipping</a></li>
+        </ul>
+      </div>
 
-      </form>
+
     </div>
 
   </section>
@@ -225,6 +238,8 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 
+  <!-- MAIN JS -->
+  <script src="./js/main.js"></script>
 
 </body>
 
